kube/dev/cache-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/servers: 'true'
    io.kompose.service: cache
  name: cache
spec:
  containers:
    - args:
        - --requirepass
      image: redis:6.2-alpine
      name: cache
      resources: {}
      volumeMounts:
        - mountPath: /data
          name: data-cache
  restartPolicy: OnFailure
  volumes:
    - name: data-cache
      persistentVolumeClaim:
        claimName: data-cache
status: {}
