kube/dev/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/servers: 'true'
    io.kompose.service: db
  name: db
spec:
  containers:
    - args:
        - --default-authentication-plugin=mysql_native_password
      image: yobasystems/alpine-mariadb:10.4.13
      name: db
      resources: {}
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: data-db
  restartPolicy: OnFailure
  volumes:
    - name: data-db
      persistentVolumeClaim:
        claimName: data-db
status: {}
