kube/dev/kafka-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/servers: 'true'
    io.kompose.service: kafka
  name: kafka
spec:
  containers:
    - env:
        - name: ALLOW_PLAINTEXT_LISTENER
          value: 'yes'
        - name: KAFKA_BROKER_ID
          value: '1'
        - name: KAFKA_CFG_ADVERTISED_LISTENERS
          value: CLIENT://kafka:9092,EXTERNAL://127.0.0.1:9092
        - name: KAFKA_CFG_INTER_BROKER_LISTENER_NAME
          value: CLIENT
        - name: KAFKA_CFG_LISTENERS
          value: CLIENT://:9092,EXTERNAL://:9093
        - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
          value: CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
        - name: KAFKA_CFG_ZOOKEEPER_CONNECT
          value: zookeeper:2181
      image: bitnami/kafka:latest
      name: kafka
      resources: {}
      volumeMounts:
        - mountPath: /bitnami/kafka
          name: data-kafka
  restartPolicy: OnFailure
  volumes:
    - name: data-kafka
      persistentVolumeClaim:
        claimName: data-kafka
status: {}
