kube/dev/prometheus-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/servers: 'true'
    io.kompose.service: prometheus
  name: prometheus
spec:
  containers:
    - image: cerus-api-prometheus
      name: prometheus
      ports:
        - containerPort: 9090
      resources: {}
      volumeMounts:
        - mountPath: /prometheus
          name: data-prometheus
  restartPolicy: OnFailure
  volumes:
    - name: data-prometheus
      persistentVolumeClaim:
        claimName: data-prometheus
status: {}
