kube/dev/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/servers: 'true'
    io.kompose.service: server
  name: server
spec:
  containers:
    - command:
        - npm
        - run
        - dev
      image: cerus-api
      name: server
      ports:
        - containerPort: 8080
      resources: {}
      volumeMounts:
        - mountPath: /usr/src/server/data
          name: server-claim0
        - mountPath: /usr/src/server/src
          name: server-claim1
  restartPolicy: OnFailure
  volumes:
    - name: server-claim0
      persistentVolumeClaim:
        claimName: server-claim0
    - name: server-claim1
      persistentVolumeClaim:
        claimName: server-claim1
status: {}
