kube/dev/kowl-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kowl
  name: kowl
spec:
  ports:
    - name: '8090'
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: kowl
status:
  loadBalancer: {}
