kube/dev/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mailhog
  name: mailhog
spec:
  ports:
    - name: '8088'
      port: 8088
      targetPort: 8025
  selector:
    io.kompose.service: mailhog
status:
  loadBalancer: {}
