kube/dev/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  ports:
    - name: '8089'
      port: 8089
      targetPort: 9090
  selector:
    io.kompose.service: prometheus
status:
  loadBalancer: {}
