kube/dev/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o kube/dev
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - name: '8080'
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
